# rust-network-viz

./: README.md
backend/: Cargo.toml
backend/data/: network_speeds.csv
backend/src/: data.rs  main.rs  routes.rs  speedtest.rs  viz.rs
frontend/: index.html  script.js  style.css
